--- a/Bind/Src/Components/Component1.fx.yaml
+++ b/Bind/Src/Components/Component1.fx.yaml
@@ -218,7 +218,7 @@ Component1 As CanvasComponent:
                             ThisItem.SubMenu = "Seguimiento Forecast",
                                 Launch("https://app.powerbi.com/groups/me/apps/e1290d0b-33c6-4038-bb60-8293995f520d/reports/fdb68645-644f-4ad4-9afc-4262e0c08526/ReportSection?ctid=3cbcc3d3-094d-4006-9849-0d11d61f484d&experience=power-bi"),
                             ThisItem.SubMenu = "Equipos virtuales",
-                            Launch("https://teams.microsoft.com/l/message/19:2a1a0daf-14a0-42b4-ac77-3c259309458c_e4ed05fb-5528-42f4-b695-b467bb640be8@unq.gbl.spaces/1717018803531?context=%7B%22contextType%22%3A%22chat%22%7D")
+                            Launch("https://app.powerbi.com/groups/me/apps/e1290d0b-33c6-4038-bb60-8293995f520d/reports/e837a961-32fa-4621-aeb6-c60e8318fe96/ReportSectionde126829460e0b57911b?ctid=3cbcc3d3-094d-4006-9849-0d11d61f484d&experience=power-bi")
                 
                         )
                     /* Fin de Opciondes Dashboard */
