--- a/Bind/Src/ModuloEquipoV1.fx.yaml
+++ b/Bind/Src/ModuloEquipoV1.fx.yaml
@@ -685,6 +685,12 @@ ModuloEquipoV1 As screen:
             NewForm(Form1);
             Set(_VarNuevoEqui,"Equi-"& GUID())
         Text: ="Crear equipo"
+        Visible: |-
+            =If(
+                LookUp(Col_BD_Persona, Usuario = _VarUsuarioJefe,GerenciaOrigen) = "GERENCIA INGENIERIA DE SOFTWARE",
+                false,
+                true
+            )
         X: =1443
         Y: =175
         ZIndex: =11
