--- a/Bind/Src/ModuloPersonaV1.fx.yaml
+++ b/Bind/Src/ModuloPersonaV1.fx.yaml
@@ -384,60 +384,6 @@ ModuloPersonaV1 As screen:
         Y: =955
         ZIndex: =12
 
-    Txt_BuscadorPersona As text:
-        BorderColor: =RGBA(53, 61, 63, 1)
-        Default: =""
-        Height: =46
-        HintText: ="Buscar Persona, Rol o Tipo"
-        RadiusBottomLeft: =20
-        RadiusBottomRight: =20
-        RadiusTopLeft: =20
-        RadiusTopRight: =20
-        Width: |-
-            =If(
-                _VarMostrarBuscar,
-                597,
-                -1
-            )
-        X: =106
-        Y: =217
-        ZIndex: =13
-
-    Icon1 As icon.Search:
-        BorderStyle: =BorderStyle.None
-        Color: =RGBA(53, 61, 63, 1)
-        Height: =40
-        Icon: =Icon.Search
-        OnSelect: =Set(_VarMostrarBuscar, !_VarMostrarBuscar)
-        Tooltip: ="Buscar Persona"
-        X: |-
-            =If(
-                _VarMostrarBuscar,
-                628,
-                110
-            )
-        Y: =221
-        ZIndex: =14
-
-    Label27 As label:
-        Color: =RGBA(79, 90, 94, 1)
-        Font: =Font.Lato
-        FontWeight: =FontWeight.Lighter
-        Height: =46
-        OnSelect: =Set(_VarMostrarBuscar, !_VarMostrarBuscar)
-        Size: =18
-        Text: ="Buscar Persona, Rol o Tipo"
-        Visible: |-
-            =If(
-                _VarMostrarBuscar,
-                false,
-                true
-            )
-        Width: =300
-        X: =163
-        Y: =217
-        ZIndex: =15
-
     Container24 As groupContainer.manualLayoutContainer:
         Fill: =RGBA(255, 255, 255, 1)
         Height: =647
@@ -3164,4 +3110,65 @@ ModuloPersonaV1 As screen:
             X: =599
             Y: =251
             ZIndex: =42
+
+    Gp_Buscador As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =43
+
+        Txt_BuscadorPersona As text:
+            BorderColor: =RGBA(53, 61, 63, 1)
+            Default: =""
+            Height: =46
+            HintText: ="Buscar Persona, Rol o Tipo"
+            RadiusBottomLeft: =20
+            RadiusBottomRight: =20
+            RadiusTopLeft: =20
+            RadiusTopRight: =20
+            Width: |-
+                =If(
+                    _VarMostrarBuscar,
+                    597,
+                    -1
+                )
+            X: =106
+            Y: =217
+            ZIndex: =13
+
+        Icon1 As icon.Search:
+            BorderStyle: =BorderStyle.None
+            Color: =RGBA(53, 61, 63, 1)
+            Height: =40
+            Icon: =Icon.Search
+            OnSelect: =Set(_VarMostrarBuscar, !_VarMostrarBuscar)
+            Tooltip: ="Buscar Persona"
+            X: |-
+                =If(
+                    _VarMostrarBuscar,
+                    628,
+                    110
+                )
+            Y: =221
+            ZIndex: =14
+
+        Label27 As label:
+            Color: =RGBA(79, 90, 94, 1)
+            Font: =Font.Lato
+            FontWeight: =FontWeight.Lighter
+            Height: =46
+            OnSelect: =Set(_VarMostrarBuscar, !_VarMostrarBuscar)
+            Size: =18
+            Text: ="Buscar Persona, Rol o Tipo"
+            Visible: |-
+                =If(
+                    _VarMostrarBuscar,
+                    false,
+                    true
+                )
+            Width: =300
+            X: =163
+            Y: =217
+            ZIndex: =15
 
