--- a/Bind/Src/ModuloIniciativasRollOut.fx.yaml
+++ b/Bind/Src/ModuloIniciativasRollOut.fx.yaml
@@ -340,6 +340,7 @@ ModuloIniciativasRollOut As screen:
             ZIndex: =22
 
             Separator3 As rectangle:
+                BorderColor: =RGBA(0, 0, 255, 1)
                 Fill: =If(ThisItem.IsSelected,RGBA(193, 211, 230, 1),RGBA(193, 211, 230, 0))
                 Height: =39
                 OnSelect: =Select(Parent)
@@ -347,6 +348,9 @@ ModuloIniciativasRollOut As screen:
                 ZIndex: =1
 
             Title3 As label:
+                BorderColor: =RGBA(0, 0, 0, 1)
+                Color: =RGBA(71, 69, 64, 1)
+                DisabledColor: =RGBA(186, 186, 186, 1)
                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                 Height: =25
                 OnSelect: =Select(Parent)
@@ -354,6 +358,7 @@ ModuloIniciativasRollOut As screen:
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
+                Size: =14
                 Text: =Text(ThisItem.Value.Fecha)
                 VerticalAlign: =VerticalAlign.Top
                 Width: =176
@@ -363,6 +368,9 @@ ModuloIniciativasRollOut As screen:
 
             Subtitle3 As label:
                 Align: =Align.Center
+                BorderColor: =RGBA(0, 0, 0, 1)
+                Color: =RGBA(71, 69, 64, 1)
+                DisabledColor: =RGBA(186, 186, 186, 1)
                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                 Height: =25
                 OnSelect: =Select(Parent)
@@ -379,6 +387,9 @@ ModuloIniciativasRollOut As screen:
 
             lbl_respon As label:
                 Align: =Align.Center
+                BorderColor: =RGBA(0, 0, 0, 1)
+                Color: =RGBA(71, 69, 64, 1)
+                DisabledColor: =RGBA(186, 186, 186, 1)
                 FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
                 Height: =25
                 OnSelect: =Select(Parent)
