--- a/Bind/pkgs/PcfConversions/PowerApps_CoreControls_Spinner.json
+++ b/Bind/pkgs/PcfConversions/PowerApps_CoreControls_Spinner.json
@@ -61,7 +61,27 @@
       ],
       "From": "1.0.25",
       "To": "1.0.26"
+    },
+    {
+      "Action": [
+        {
+          "Name": "SpinnerColor",
+          "Type": "add"
+        }
+      ],
+      "From": "1.0.36",
+      "To": "1.0.37"
+    },
+    {
+      "Action": [
+        {
+          "Name": "TrackColor",
+          "Type": "add"
+        }
+      ],
+      "From": "1.3.0",
+      "To": "1.3.1"
     }
   ],
-  "Version": "1.0.34"
+  "Version": "1.4.1"
 }
