--- a/Bind/pkgs/PcfConversions/PowerApps_CoreControls_TextCanvas.json
+++ b/Bind/pkgs/PcfConversions/PowerApps_CoreControls_TextCanvas.json
@@ -144,7 +144,43 @@
       ],
       "From": "0.0.25",
       "To": "0.0.26"
+    },
+    {
+      "Action": [
+        {
+          "Name": "BorderStyle",
+          "Type": "remove"
+        },
+        {
+          "Name": "BorderThickness",
+          "Type": "remove"
+        },
+        {
+          "Name": "BorderColor",
+          "Type": "remove"
+        }
+      ],
+      "From": "0.0.36",
+      "To": "0.0.37"
+    },
+    {
+      "Action": [
+        {
+          "Name": "BorderStyle",
+          "Type": "add"
+        },
+        {
+          "Name": "BorderThickness",
+          "Type": "add"
+        },
+        {
+          "Name": "BorderColor",
+          "Type": "add"
+        }
+      ],
+      "From": "0.0.37",
+      "To": "0.0.38"
     }
   ],
-  "Version": "0.0.30"
+  "Version": "0.0.38"
 }
